/**
 * Protocol Buffer definitions for the Deal Service.
 *
 * This file defines the gRPC service interface and message types for managing
 * sales deals in the commission calculator system.
 *
 * gRPC Service Concepts:
 * - service: Defines a set of RPC (Remote Procedure Call) methods
 * - rpc: Individual method that can be called remotely
 * - Unary RPC: Simple request-response (like REST)
 * - Server streaming RPC: Client sends one request, server sends stream of responses
 * - Client streaming RPC: Client sends stream of requests, server sends one response
 * - Bidirectional streaming: Both sides send streams
 */
syntax = "proto3";
package commission;
import "commission_common.proto";

option java_package = "com.chapman.edu.commissions.api.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "DealServiceProto";
/**
 * DealProduct represents a product within a deal.
 *
 * Each deal can contain multiple products with varying quantities and prices.
 * This message corresponds to the DealProduct Java class.
 */
message DealProduct {
    string id = 1;                  // Unique identifier
    string product_id = 2;          // Reference to product catalog
    string product_name = 3;        // Display name of the product
    int32 quantity = 4;             // Number of units
    Decimal price = 5;              // Price per unit
    Decimal discount = 6;           // Total discount applied
    string deal_id = 7;             // Reference to parent deal
}

/**
 * Deal represents a sales deal in the system.
 *
 * Core entity for commission calculations. Contains all information about
 * a sales transaction including products, status, and sales representative.
 */
message Deal {
    string id = 1;                  // Unique identifier (e.g., "DEAL-001")
    string title = 2;               // Deal title/description
    Decimal value = 3;              // Total deal value
    DealStatus status = 4;          // Current status (OPEN, WON, LOST, CANCELLED)
    string sales_rep_id = 5;        // ID of the sales representative
    repeated DealProduct products = 6;  // List of products in the deal (repeated = array/list)
    Date close_date = 7;            // Date when deal was closed (if applicable)
    Date created_date = 8;          // Date when deal was created
    Date last_modified_date = 9;    // Date of last modification
}

/**
 * Request message for creating a new deal.
 *
 * The ID will be auto-generated by the server, so it's not included here.
 */
message CreateDealRequest {
    string title = 1;
    Decimal value = 2;
    string sales_rep_id = 3;
    repeated DealProduct products = 4;
}

/**
 * Response message containing a created deal.
 */
message CreateDealResponse {
    Deal deal = 1;  // The newly created deal with generated ID
}

/**
 * Request message for retrieving a specific deal by ID.
 *
 * Simple request with just the identifier - demonstrates basic unary RPC.
 */
message GetDealRequest {
    string id = 1;  // The deal ID to retrieve
}

/**
 * Response message containing a single deal.
 */
message GetDealResponse {
    Deal deal = 1;  // The requested deal (null if not found is handled via gRPC status)
}

/**
 * Request message for listing all deals with optional filters.
 *
 * Demonstrates optional filtering using protobuf's optional keyword.
 * In proto3, all fields are optional by default, but we can be explicit.
 */
message ListDealsRequest {
    string status_filter = 1;       // Optional: Filter by status (e.g., "OPEN", "WON")
    string sales_rep_id_filter = 2; // Optional: Filter by sales rep ID
}

/**
 * Response message containing a list of deals.
 *
 * Uses 'repeated' keyword to indicate this is a collection/array.
 */
message ListDealsResponse {
    repeated Deal deals = 1;  // List of matching deals
    int32 total_count = 2;    // Total number of deals (useful for pagination)
}

/**
 * Request message for updating an existing deal.
 *
 * Contains the full deal object with updated fields.
 * The ID field identifies which deal to update.
 */
message UpdateDealRequest {
    Deal deal = 1;  // The deal with updated values
}

/**
 * Response message containing the updated deal.
 */
message UpdateDealResponse {
    Deal deal = 1;  // The updated deal as saved in the system
}

/**
 * Request message for deleting a deal.
 *
 * Simple delete operation requiring only the ID.
 */
message DeleteDealRequest {
    string id = 1;  // ID of the deal to delete
}

/**
 * Response message for delete operation.
 */
message DeleteDealResponse {
    bool success = 1;      // Whether deletion was successful
    string message = 2;    // Optional message (e.g., error reason if failed)
}

/**
 * DealService defines the gRPC service interface for deal management.
 *
 * This service provides CRUD operations (Create, Read, Update, Delete) for deals.
 * Each RPC method corresponds to a REST-like operation but uses gRPC's
 * efficient binary protocol and HTTP/2.
 *
 * Service Methods Pattern:
 * - Create: POST-like operation to create new resource
 * - Get: GET-like operation to retrieve single resource
 * - List: GET-like operation to retrieve multiple resources
 * - Update: PUT-like operation to modify existing resource
 * - Delete: DELETE-like operation to remove resource
 *
 * All methods use unary RPC (single request → single response).
 */
service DealService {
    /**
     * Create a new deal.
     *
     * Client sends deal details, server generates ID and returns complete deal.
     * Analogous to: POST /api/v1/deals
     */
    rpc CreateDeal(CreateDealRequest) returns (CreateDealResponse);

    /**
     * Retrieve a specific deal by ID.
     *
     * Returns NOT_FOUND error if deal doesn't exist.
     * Analogous to: GET /api/v1/deals/{id}
     */
    rpc GetDeal(GetDealRequest) returns (GetDealResponse);

    /**
     * List all deals with optional filtering.
     *
     * Can filter by status or sales rep ID.
     * Analogous to: GET /api/v1/deals?status=OPEN&salesRepId=USER-1
     */
    rpc ListDeals(ListDealsRequest) returns (ListDealsResponse);

    /**
     * Update an existing deal.
     *
     * Replaces the deal with the provided data.
     * Returns NOT_FOUND error if deal doesn't exist.
     * Analogous to: PUT /api/v1/deals/{id}
     */
    rpc UpdateDeal(UpdateDealRequest) returns (UpdateDealResponse);

    /**
     * Delete a deal by ID.
     *
     * Returns success=false if deal doesn't exist.
     * Analogous to: DELETE /api/v1/deals/{id}
     */
    rpc DeleteDeal(DeleteDealRequest) returns (DeleteDealResponse);
}